...
    override func viewDidLoad() {
        super.viewDidLoad()
        view.backgroundColor = .white
        title = "Movie"
        createTableView()
        updateView()
        tableView.accessibilityIdentifier = "MovieTableView"
    }

    func updateView() {
        viewModel?.updateViewData = { [weak self] in
            DispatchQueue.main.async {
                self?.tableView.reloadData()
...
