...
    private let movieImageView = UIImageView()
    private let overviewLabel = UILabel()
    private let imageService = ImageAPIService()

    override init(style: UITableViewCell.CellStyle, reuseIdentifier: String?) {
        super.init(style: style, reuseIdentifier: reuseIdentifier)
        accessibilityIdentifier = "MovieTableViewCell"
        cellAnchor()
    }

    @available(*, unavailable)
    required init?(coder _: NSCoder) {
        fatalError("init(coder:) has not been implemented")
...
